# libmikataarm

./: .gitmodules  CMakeLists.txt  README.md
include/: kinematics.h  mikata.h
src/: CMakeLists.txt  kinematics.cpp  kinematics_test.cpp  mikata.cpp  mikata_kinematics_test.cpp  selfweightcomp_test.cpp  test.cpp  unit_test.cpp
